@@ -22,6 +22,9 @@
     - New Split filter.
     
     - when() method for Constraints can now accept a callback
+    
+    - Transformer callbacks now get $params as second arguments (as Constraints
+      aready were getting)
 
 0.02004 2008-02-22
 
